camel-message-router/ocp-deployment/processed-fuse-sb-template.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: camel-message-router
      component: camel-message-router
      group: quickstarts
      name: camel-message-router
      provider: s2i
      template: s2i-sb-fuse-service-db
      version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
    name: camel-message-router-route
  spec:
    to:
      kind: Service
      name: camel-message-router
- apiVersion: v1
  kind: Service
  metadata:
    annotations: {}
    labels:
      app: camel-message-router
      component: camel-message-router
      group: quickstarts
      name: camel-message-router
      provider: s2i
      template: s2i-sb-fuse-service-db
      version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
    name: camel-message-router
  spec:
    clusterIP: None
    deprecatedPublicIPs: []
    ports:
    - port: 9411
      protocol: TCP
      targetPort: 8080
    selector:
      app: camel-message-router
      component: camel-message-router
      group: quickstarts
      provider: s2i
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    creationTimestamp: null
    labels:
      app: camel-message-router
      component: camel-message-router
      group: quickstarts
      name: camel-message-router
      provider: s2i
      template: s2i-sb-fuse-service-db
      version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
    name: camel-message-router
  spec: {}
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    creationTimestamp: null
    labels:
      app: camel-message-router
      component: camel-message-router
      group: quickstarts
      name: camel-message-router
      provider: s2i
      template: s2i-sb-fuse-service-db
      version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
    name: camel-message-router
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: camel-message-router:latest
    resources:
      limits:
        memory: 3Gi
      requests:
        memory: 2Gi
    source:
      contextDir: camel-message-router
      git:
        ref: main
        uri: https://github.com/lbamford/message-router.git
      type: Git
    strategy:
      sourceStrategy:
        forcePull: true
        from:
          kind: ImageStreamTag
          name: fuse7-java11-openshift:1.11
          namespace: openshift
        incremental: true
      type: Source
    triggers:
    - github:
        secret: pYVgQ6e0vuV7d2IjXOjnPIGbOFM3YGqrxATMGwjW
      type: GitHub
    - generic:
        secret: pYVgQ6e0vuV7d2IjXOjnPIGbOFM3YGqrxATMGwjW
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    creationTimestamp: null
    labels:
      app: camel-message-router
      component: camel-message-router
      group: quickstarts
      name: camel-message-router
      provider: s2i
      template: s2i-sb-fuse-service-db
      version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
    name: camel-message-router
  spec:
    replicas: 1
    selector:
      app: camel-message-router
      component: camel-message-router
      deploymentconfig: camel-message-router
      group: quickstarts
      provider: s2i
      version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: camel-message-router
          com.company: Red_Hat
          component: camel-message-router
          deploymentconfig: camel-message-router
          group: quickstarts
          provider: s2i
          rht.comp: camel-message-router
          rht.comp_ver: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
          rht.prod_name: Red_Hat_Integration
          rht.prod_ver: "7.11"
          version: 7.11.0.fuse-sb2-7_11_0-00023-redhat-00001
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          - name: DB_SERVICE_NAME
            value: jdbc:oracle:thin:@192.168.0.71:51521/local
          - name: DB_SERVICE_DATABASE
            value: sampledb
          - name: DB_SERVICE_USERNAME
            value: user
          - name: DB_SERVICE_PASSWORD
            value: password
          image: library/camel-message-router:latest
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 180
          name: camel-message-router
          ports:
          - containerPort: 8080
            name: http
          - containerPort: 8778
            name: jolokia
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "2"
              memory: 8Gi
            requests:
              cpu: "1"
              memory: 1Gi
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - camel-message-router
        from:
          kind: ImageStreamTag
          name: camel-message-router:latest
      type: ImageChange
kind: List
metadata: {}
